--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,6 +38,7 @@ subjects:
 - !lcsh 'United States -- Politics and government'
 - !lcsh 'Presidents -- United States'
 - !lcsh 'United States -- History -- Sources'
+- GITenberg
 title: "A Compilation of the Messages and Papers of the Presidents\r\nVolume 8, part\
   \ 2: Grover Cleveland"
 url: http://www.gutenberg.org/ebooks/14137
